# py-dyneval

./: .gitignore  AUDIT.md  DISCOVERY.md  MATH.md  README.md  RECONSTRUCTION_REPORT.md  pyproject.toml
data/: candidate_metrics.json  manifest.yaml  reference_metrics.json  reference_traj.json
examples/: compare_R_vs_Python.ipynb  evolution.ipynb  function_by_function_R_parity.ipynb  tutorial_basic.ipynb
pydyneval/: __init__.py  calculate_metrics.py  metric_correlation.py  metric_featureimp.py  metric_flip.py  metric_him.py  metric_isomorphic.py  metric_mapping.py
tests/: _run_candidate.py  r_reference_driver.R  test_exact_match.py  test_smoke.py
